Stashing all changes for replaces with class