@@ -9,3 +9,5 @@ dependencies {
     api project(':tendril-util')
     testImplementation project(':tendril-test')
 }
+
+compileJava.options.compilerArgs += ['--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED']
